# stock-analysis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.beads/: metadata.json
.claude/: settings.json
configs/: current_holdings.example.csv  portfolio.gcp.yaml  portfolio.yaml  tableau.example.yaml
docs/: backtest-results-vs-spy.md  bigquery-data-dictionary.md  cloud-architecture.md  forecasting-optimization-methodology.md  ml-upgrade-plan.md  portfolio-optimizer-final-idea.md  preprocessing-medallion-pipeline.md  project-current-state.md  tableau-dashboard-build-plan.md  tableau-dashboard-design.md
docs/experiments/: autoresearch-summary.md  catboost-momentum-return-zscore-production-pit-broad-20260428.json  catboost-return-zscore-production-pit-broad-20260428.json  e0.md  (+49 more)
experiments/: e0_heuristic.yaml
notebook/: autoresearch-mlflow-stock-model.ipynb  cost-aware-pit-spy-gate-20260428.ipynb  phase2-stock-ml.ipynb
plans/: 20260423-2357-one-shot-sp500-portfolio-assistant.md  20260424-1105-autoresearch-experimentation-harness.md  20260424-1407-trade-aware-optimizer.md  20260424-1530-contribution-aware-optimizer.md  20260425-2338-supabase-cashflow-tracking.md  20260428-1358-calibrated-forecast-returns.md  20260502-1003-gcp-direct-cloud-storage-pipeline.md  20260503-1124-gcp-deployment-preprocessing-remediation.md
runbooks/: autoresearch.md  full-execution.md  gcp-on-demand-cloud-run.md  one-shot-sp500.md  supabase-account-tracking.md  tableau-prep.md  tableau-server-publish.md
scripts/: autoresearch_eval.py
tests/: conftest.py
(+119 files in other folders)
